<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:weightSum="5">

    <TextView
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login_text_intro"
        android:textSize="@dimen/login_textSize"/>

    <TextView
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/login_text_prompt"
        android:textSize="@dimen/login_textSize"/>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/login_doctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_hospital"
            android:textSize="@dimen/login_textSize_button"
            android:onClick="onClickLogin"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/login_technician"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_technician"
            android:textSize="@dimen/login_textSize_button"
            android:onClick="onClickLogin"/>

    </RelativeLayout>

</LinearLayout>