<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:weightSum="8">

    <ScrollView
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_entry_technician_title"
                android:textSize="@dimen/log_entry_technician_textSize_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/log_entry_prompt_date"
                android:textSize="@dimen/log_entry_technician_textSize"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="datetime"
                android:textSize="@dimen/log_entry_technician_textSize_input"
                android:text="3/23/2017"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/log_entry_prompt_name"
                android:textSize="@dimen/log_entry_technician_textSize"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="text"
                android:textSize="@dimen/log_entry_technician_textSize_input"
                android:text="ECG"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/log_entry_prompt_maintenancetype"
                android:textSize="@dimen/log_entry_technician_textSize"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:spinnerMode="dialog"
                android:entries="@array/log_entry_choices_maintenancetypes"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/log_entry_prompt_comments"
                android:textSize="@dimen/log_entry_technician_textSize"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textLongMessage"
                android:textSize="@dimen/log_entry_technician_textSize_inputLong"
                android:text=""/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_padding"
        android:weightSum="2">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/log_entry_button_ok"
            android:textSize="@dimen/log_entry_technician_textSize_button"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/log_entry_button_cancel"
            android:textSize="@dimen/log_entry_technician_textSize_button"/>

    </LinearLayout>

</LinearLayout>