<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/account_create_footer_height">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_create_title"
                android:textSize="@dimen/account_create_textSize_title"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_create_input_name_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text|textCapWords|textAutoCorrect|textPersonName"
                    android:textSize="@dimen/account_create_textSize_input"
                    android:text=""
                    android:hint="@string/account_create_name_first"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_create_input_name_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text|textCapWords|textAutoCorrect|textPersonName"
                    android:textSize="@dimen/account_create_textSize_input"
                    android:text=""
                    android:hint="@string/account_create_name_last"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/account_create_user_type"
                android:textSize="@dimen/account_create_textSize"/>

            <Spinner
                android:id="@+id/account_create_input_user_type"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:spinnerMode="dialog"
                android:entries="@array/account_create_choices_user_type_names"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/form_button_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/account_create_footer_height"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/button_bar_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@android:color/background_dark"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/button_done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/account_create_button_create"
            android:textSize="@dimen/account_create_textSize_button"
            android:onClick="onClickDone"/>

    </RelativeLayout>

</RelativeLayout>